Fixed spacing issue for last section heading in homepage

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -671,6 +671,10 @@
   }
 }
 
+.more-section {
+  padding-left: 15px;
+  padding-bottom: 10px;
+}
 @media (max-width: @screen-xs-max) {
   body {
     padding-top: 0px !important;
